--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -5,11 +5,11 @@ body {
 	letter-spacing: 0;
 	line-height: 1.66rem;
 	margin: 0;
-  -webkit-font-smoothing: antialiased;
-  font-smoothing: antialiased;
-  text-rendering: optimizeLegibility;
-  -webkit-text-size-adjust: 100%;
-  -ms-text-size-adjust: 100%;
+	-webkit-font-smoothing: antialiased;
+	-font-smoothing: antialiased;
+	text-rendering: optimizeLegibility;
+	-webkit-text-size-adjust: 100%;
+	-ms-text-size-adjust: 100%;
 }
 
 *:focus {
